Partial work on surefire config